сетки на флексах главная страница

--- a/styles/style.css
+++ b/styles/style.css
@@ -18,8 +18,15 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 body {
-  background-color: #ffffff;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: #F2F2F2;
   font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 21px;
@@ -32,6 +39,11 @@ a {
   text-decoration: none;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+}
+
 li {
   list-style: none;
 }
@@ -41,15 +53,37 @@ li {
 }
 
 /* LOGO */
-.main-logo {
-  background-image: url("../img/index-bg.jpg");
-  background-size: 100% auto;
-  background-repeat: no-repeat;
-  width: 1200px;
-  height: 485px;
-}
+
 
 /* HEADER */
+.header {
+  width: 1200px;
+  height: 70px;
+  margin: 0 auto;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+  background-color: white;
+}
+
+.navigation {
+  margin: 0 auto;
+  width: 1060px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.navigation-list {
+  width: 515px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.navigation-user {
+  display: flex;
+  justify-content: space-around;
+  width: 265px;
+  margin-left: auto;
+}
+
 .navigation__link {
   text-decoration: none;
   font-size: 20px;
@@ -58,40 +92,119 @@ li {
   color: #000000;
 }
 
+.navigation__item {
+  display: flex;
+  align-items: center;
+}
+
 .navigation__button {
   color: #FFFFFF;
   font-size: 16px;
   font-weight: 700;
   line-height: 20px;
   text-transform: uppercase;
-  padding: 9px 15px 8px;
+  padding: 9px 30px 8px;
   background-color: #756257;
   text-decoration: none;
   border-radius: 4px;
 }
 
+/* MAIN */
+.main {
+  width: 1200px;
+  margin: 0 auto;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+}
+
 /* DESCRIPTION */
+.main-logo {
+  background-image: url("../img/index-bg.jpg");
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  width: 1200px;
+  margin: 0 auto;
+  height: 485px;
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  display: block;
+  margin: 0 auto;
+
+}
+
 .description {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   line-height: 36px;
+  background-color: white;
 }
 
 .description__title {
   text-transform: uppercase;
   font-weight: 700;
   font-size: 30px;
+  width: 700px;
+  text-align: center;
+  padding-top: 63px;
 }
 
 .description__causes {
   font-size: 22px;
+  width: 700px;
+  text-align: center;
+  padding-bottom: 80px;
 }
 
 /* CAUSE */
-.cause-title {
+.cause {
+  width: 400px;
+  height: 384px;
+  background-color: #83B3D3;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 97px 0px 87px 0px;
+}
+
+.cause-1 {
+  display: flex;
+  flex-direction: row;
+}
+
+.cause-2 {
+  display: flex;
+  flex-direction: row;
+}
+
+.cause__title {
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
-  color: #000000;
+  color: white;
+  text-transform: uppercase;
+}
+
+.cause__title--other {
+  color: black;
+}
+
+.cause__item {
+  width: 400px;
+  height: 384px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  padding: 98px 0px 108px 0px;
+}
+
+.cause-list {
+  display: flex;
+  flex-direction: row;
 }
 
 .cause__number {
@@ -102,11 +215,11 @@ li {
 .cause__description {
   font-size: 18px;
   line-height: 21px;
+  width: 250px;
 }
 
 .cause--1-2 {
-  background-color: #83B3D3;
-  color: white
+  color: white;
 }
 
 .cause--3-5 {
@@ -120,31 +233,55 @@ li {
 /* ADVANTAGES */
 .advantages {
   background-color: white;
+  display: flex;
+  flex-direction: row;
 }
 
 .advantages__item {
   text-align: center;
+  width: 400px;
+  height: 384px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .advantages__title {
   color: #000000;
   font-size: 24px;
   line-height: 28px;
+  text-transform: uppercase;
 }
 
 .advantages__item--1-3 {
   background-color: #83B3D31F;
 }
 
+.advantages__description {
+  width: 250px;
+  line-height: 21px;
+}
+
 /* HOTEL */
+.hotel {}
+
 .hotel__content {
   text-align: center;
+  background-color: white;
+  height: 417px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .hotel__title {
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
+  text-transform: uppercase;
+  margin-top: 0px;
 }
 
 .hotel__description {
@@ -178,6 +315,7 @@ li {
   border: none;
   width: 600px;
   height: 60px;
+  padding: 0 22px 0 19px;
 }
 
 .mailing__btn {
@@ -192,19 +330,57 @@ li {
   height: 60px;
   text-transform: uppercase;
 }
-
+.mailing__form{
+  display: flex;
+}
 .mailing__title {
   color: white;
+  margin-top: 0;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+  font-weight: 700;
 }
 
 .mailing__description {
   color: white;
+  font-size: 22px;
+  padding-bottom: 46px;
 }
 
 .mailing__content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   text-align: center;
+  height: 411px;
 }
 
+/* FOOTER */
+.footer {
+  width: 1200px;
+  margin: 0 auto;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+}
+.footer__content{
+  margin: 0 72px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 120px;
+}
+.social{
+  display: flex;
+  flex-direction: row;
+  width: 170px;
+  justify-content: space-between;
+}
+.contact-phone{
+  color: black;
+  font-size: 40px;
+  line-height: 40px;
+}
 /*  */
 
 
@@ -213,7 +389,20 @@ li {
 
 
 
-/* CATALOG */
+
+
+
+
+
+
+
+
+
+/*PAGE   CATALOG */
+.catalog {
+  flex-grow: 1;
+}
+
 .catalog-header {
   background-image: url("../img/header-catalog-bg.jpg");
   background-repeat: no-repeat;
