--- a/styles/style.css
+++ b/styles/style.css
@@ -65,28 +65,30 @@ ul {
   margin: 0 auto;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
   background-color: white;
+
 }
 
 .navigation {
   margin: 0 auto;
   width: 1060px;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 500px 255px;
+  column-gap: 310px;
+  align-items: center;
 }
 
 .navigation-list {
   width: 515px;
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 140px 68px 82px 93px;
+  column-gap: 34px;
 }
 
 .navigation-user {
-  display: flex;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: 18px 18px 160px;
+  column-gap: 23.5px;
   width: 265px;
-  margin-left: auto;
-  flex-wrap: wrap;
 }
 
 .navigation__link {
@@ -96,7 +98,9 @@ ul {
   font-weight: 700;
   color: #000000;
 }
-
+.navigation__logo{
+  margin-right: 13px;
+}
 .navigation__item {
   display: flex;
   align-items: center;
@@ -108,10 +112,11 @@ ul {
   font-weight: 700;
   line-height: 20px;
   text-transform: uppercase;
-  padding: 9px 30px 8px;
+  padding: 9px 29px 8px;
   background-color: #756257;
   text-decoration: none;
   border-radius: 4px;
+  margin-left: 9px;
 }
 
 /* MAIN */
@@ -120,7 +125,10 @@ ul {
   margin: 0 auto;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
 }
-
+.causes-grid-cont{
+  display: grid;
+  grid-template-rows: 384px 384px 384px 384px
+}
 /* DESCRIPTION */
 .main-logo {
   background-image: url("../img/index-bg.jpg");
@@ -137,8 +145,7 @@ ul {
   display: block;
   margin: 0 auto;
 
-}
-
+}  
 .description {
   display: flex;
   flex-direction: column;
@@ -176,13 +183,13 @@ ul {
 }
 
 .cause-1 {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 400px 800px;
 }
 
 .cause-2 {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 800px 400px;
 }
 
 .cause__title {
@@ -208,8 +215,8 @@ ul {
 }
 
 .cause-list {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 400px 400px 400px;
 }
 
 .cause__number {
@@ -238,8 +245,8 @@ ul {
 /* ADVANTAGES */
 .advantages {
   background-color: white;
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 400px 400px 400px;
 }
 
 .advantages__item {
@@ -387,20 +394,27 @@ ul {
 
 .footer__content {
   margin: 0 72px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   height: 120px;
-}
-
-.social {
   display: flex;
-  flex-direction: row;
+  align-items: center;
+}
+.footer__grid-cont{
+  display: grid;
+  grid-template-columns: 107px 335px 115px;
+  column-gap: 250px;
+}
+.social {
+  display: grid;
+  grid-template-columns: 18px 10px 20px;
+  column-gap: 30px;
   width: 170px;
   justify-content: space-between;
   flex-wrap: wrap;
 }
-
+.social-links{
+  display: flex;
+  align-items: center;
+}
 .contact-phone {
   color: black;
   font-size: 40px;
